--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Onion open source documentation
+title: Oniro
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
